[gd_scene load_steps=3 format=3 uid="uid://dhajq42i4unui"]

[ext_resource type="Script" uid="uid://ya1156qqyvki" path="res://scripts/card/card.gd" id="1_d81rb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6u4wf"]
size = Vector2(521, 774)

[node name="Card" type="Node2D"]
script = ExtResource("1_d81rb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Area2D"]
offset_right = 512.0
offset_bottom = 768.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(256.5, 378)
shape = SubResource("RectangleShape2D_6u4wf")

[node name="TimerAnimation" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="TimeClick" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
